DistributionPackages/Neos.NeosIo/Resources/Private/Scss/Atoms/_Base.scss
/**
 * Base and high-level wrapper elements
 */

html {
	min-width: $layout-min-width;
}

body {
	// Remove default margin.
	margin: 0;

	font: $base-font-weight #{$base-font-size/16*100}%/#{$base-line-height/$base-font-size} $base-font-family;
	text-align: $start;
	color: $base-text-color;
	background: $body-background;
}

// Disable scroll - Used in the OffCanvas active state.
.html--scrollDisabled {
	height: 100%;

	> body {
		height: 100%;
		overflow: hidden;
	}
}


.siteWrapper {
	position: relative;
	width: $layout-width;
	max-width: $layout-max-width;

	@if $centered-layout {
		margin-left: auto;
		margin-right: auto;
	}

	@include max-screen(480px) {
		max-width: 100%;
		width: 100%;
	}
}
.siteWrapper--small {
	max-width: $layout-small-width;
}

